--- a/iMusic/iMusic/Search/TrackDetailView/TrackDetailView.xib
+++ b/iMusic/iMusic/Search/TrackDetailView/TrackDetailView.xib
@@ -39,6 +39,7 @@
                             <subviews>
                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="YSr-AW-jeC">
                                     <rect key="frame" x="-2" y="0.0" width="337" height="31"/>
+                                    <color key="tintColor" systemColor="opaqueSeparatorColor"/>
                                     <connections>
                                         <action selector="hundleCurrentTimeSlider:" destination="Uzp-Bb-dMO" eventType="valueChanged" id="Ijz-1h-lxH"/>
                                     </connections>
@@ -123,6 +124,7 @@
                                 </imageView>
                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="2nL-eX-shS">
                                     <rect key="frame" x="25" y="0.0" width="283" height="18"/>
+                                    <color key="tintColor" systemColor="opaqueSeparatorColor"/>
                                     <connections>
                                         <action selector="handleVolumeSlider:" destination="Uzp-Bb-dMO" eventType="valueChanged" id="qvW-2f-rAD"/>
                                     </connections>
@@ -167,6 +169,9 @@
         <image name="Left" width="34" height="20"/>
         <image name="Right" width="34" height="20"/>
         <image name="pause" width="57" height="57"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
